[*] fixed upload\download indicator color. fixed switch animation color in dark mode. fixed distance between labels inside change server button

--- a/vpn/qml/widgets/dapqml-widgets-asset/brand/KelVPN/style.css
+++ b/vpn/qml/widgets/dapqml-widgets-asset/brand/KelVPN/style.css
@@ -1331,7 +1331,7 @@
 
 .dashboard-speed-sub
 {
-    color: "#A4A3C0";
+    color: "@input-placeholder";
     scaled-font: scaled(12);    
 }
 
